--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -5,12 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginRegister">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -20,6 +17,7 @@
     <ImageView
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:contentDescription="@string/icon"
         android:src="@drawable/white_bg_logo"
         android:layout_marginTop="10dp"/>
     <TextView
@@ -43,6 +41,7 @@
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
         android:layout_height="460dp"
+        android:contentDescription="@string/icon"
         android:id="@+id/viewpager" />
 
         <LinearLayout
@@ -62,26 +61,10 @@
                 style="@style/Widget.Material3.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="52dp"
-                android:textSize="18dp"
-                android:text="Sign In?" />
+                android:textSize="18sp"
+                android:text="Sign Up?" />
 
 
         </LinearLayout>
-
-
     </LinearLayout>
-
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/animationView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            app:lottie_rawRes="@raw/loading_orange"
-            app:lottie_autoPlay="true"
-            android:visibility="gone"
-            android:background="@color/transparentDark"
-            app:lottie_loop="true"/>
-    </FrameLayout>
 </ScrollView>
