--- a/app/src/main/res/layout/activity_table_order.xml
+++ b/app/src/main/res/layout/activity_table_order.xml
@@ -62,6 +62,14 @@
                 />
 
         </LinearLayout>
+        <TextView
+            android:id="@+id/tvNorec"
+            style="@style/cardHtext"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="No record yet!"
+            />
+
     </RelativeLayout>
 
 
