--- a/app/src/main/res/layout/fragment_sgin_up.xml
+++ b/app/src/main/res/layout/fragment_sgin_up.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="460dp"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="15dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragements.SginUpFragment">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="10dp"
-        app:cardCornerRadius="15dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
 
 
@@ -28,6 +24,7 @@
         android:layout_marginBottom="12dp"
         android:clickable="true"
         android:focusable="true"
+        android:contentDescription="@string/icon"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/profile"/>
 
@@ -39,7 +36,8 @@
             style="@style/fragEt"
             android:inputType="textEmailAddress"
             android:hint="Email Address"
-            android:id="@+id/etemail"/>
+            android:id="@+id/etemail"
+            android:autofillHints="emailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         style="@style/fragInLay"
@@ -66,33 +64,11 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="8dp"
         android:text="Create Account" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:gravity="center"-->
-<!--        android:orientation="horizontal">-->
 
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Already have an account."-->
-<!--        />-->
-<!--    <Button-->
-<!--        android:id="@+id/btnloginS"-->
-<!--        style="@style/Widget.Material3.Button.TextButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="52dp"-->
-<!--        android:textSize="18dp"-->
-<!--        android:text="Sign in?" />-->
-
-
-<!--    </LinearLayout>-->
-
-</LinearLayout>
+</androidx.cardview.widget.CardView>
