--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="460dp"
-    android:orientation="vertical"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="10dp"
+    app:cardUseCompatPadding="true"
     tools:context=".Fragements.SigninFragment">
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="460dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="10dp"
-        app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,7 +26,8 @@
             style="@style/fragEt"
             android:inputType="textEmailAddress"
             android:hint="Email Address"
-            android:id="@+id/etemail1"/>
+            android:id="@+id/etemail1"
+            android:autofillHints="emailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
         style="@style/fragInLay"
@@ -68,7 +65,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Or use Social Media accounts to Login!\n"
+        android:text="Or login via!\n"
          />
 
         <Button
@@ -79,71 +76,6 @@
 
 
     </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
+</androidx.cardview.widget.CardView>
 
-
-</LinearLayout>
-
-<!--
-<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Don't have an account." />
-
-        <Button
-            android:id="@+id/btnregisterS"
-            style="@style/Widget.Material3.Button.TextButton"
-            android:layout_width="wrap_content"
-            android:layout_height="52dp"
-            android:textSize="18dp"
-            android:text="Sign Up?" />
-
-
-    </LinearLayout>
-
-
-<LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="15dp">
-
-        <ImageView
-            android:id="@+id/fbLogo"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:contentDescription="img"
-            android:focusable="true"
-            android:src="@drawable/fb" />
-
-        <ImageView
-            android:id="@+id/phoneLogo"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:contentDescription="img"
-            android:focusable="true"
-            android:src="@drawable/phone" />
-
-        <ImageView
-            android:id="@+id/gogleLogo"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:contentDescription="img"
-            android:focusable="true"
-            android:src="@drawable/google" />
-    </LinearLayout>
-
--->
