--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,17 +3,16 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange">#F97D00</color>
-    <color name="darkBlue">#1D2341</color>
-    <color name="noColor">#00FFFFFF</color>
+    <color name="orangeDark">#E48800</color>
     <color name="tran">#5A000000</color>
     <color name="lighOrange">#FECD84</color>
-    <color name="lighGray">#CCCCCC</color>
+    <color name="lighGray">#EDEDED</color>
     <color name="transparentDark">#9B000000</color>
     <color name="darkGray">#3D3D3D</color>
     <color name="red">#FF2D1D</color>
     <color name="lighred">#D0473D</color>
     <color name="llyellow">#FFFFFF</color>
-    <color name="Blue">#104BFF</color>
+    <color name="Blue">#2196F3</color>
     <color name="yellow">#FFC61B</color>
 </resources>
 <!--<color name="orange">#F9830D</color>-->
