--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,59 +1,54 @@
-<resources xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
     <style name="Base.Theme.Restoran" parent="Theme.Material3.Light.NoActionBar">
-    <item name="colorPrimary">@color/orange</item>
-    <item name="colorPrimaryDark">@color/orangeDark</item>
+        <item name="colorPrimary">@color/orange</item>
+        <item name="colorPrimaryDark">@color/orangeDark</item>
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
         <item name="android:windowLightStatusBar" >true</item>
         <item name="android:fontFamily">@font/montserrat_medium</item>
     </style>
-
+<!---->
     <style name="main2Theme" parent="Theme.Material3.Light.NoActionBar">
-        <item name="android:windowBackground">@color/lighOrange</item>
         <item name="android:statusBarColor" >@color/orange</item>
         <item name="android:colorPrimary" >@color/orange</item>
         <item name="android:colorPrimaryDark">@color/orange</item>
-        <item name="android:alertDialogTheme">@style/alrtCustTheme</item>
         <item name="android:colorAccent" >?android:attr/colorPrimary</item>
         <item name="android:fontFamily">@font/montserrat_medium</item>
 
     </style>
-    <style name="alrtCustTheme" parent="android:Theme.Material.Dialog">
-        <item name="android:colorPrimary" >@color/orange</item>
-        <item name="colorAccent" >@color/orange</item>
-    </style>
-
-    <style name="mainActivity" parent="Base.Theme.Restoran" >
-        <item name="android:statusBarColor" >@color/orange</item>
-        <item name="android:windowLightStatusBar" >false</item>
-    </style>
 
 
-
+<!---->
     <style name="splashActivity" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
         <item name="android:windowLightStatusBar" >true</item>
     </style>
+<!--    -->
     <style name="aboutActivity" parent="Theme.AppCompat.Light">
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:windowLightStatusBar" >true</item>
-
     </style>
+    <!-- checked   -->
+    <style name="ImgZoomActivity" parent="Theme.Material3.Dark">
+        <item name="android:statusBarColor" >@color/black</item>
+        <item name="android:textColorPrimary" >@color/black</item>
+        <item name="android:colorControlNormal">@color/white</item>
+    </style>
+<!---->
     <style name="orderAct" parent="Theme.Material3.Light">
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
-        <item name="android:timePickerDialogTheme">@style/alrtCustTheme</item>
-        <item name="android:datePickerDialogTheme">@style/alrtCustTheme</item>
+        <item name="android:timePickerDialogTheme">@style/cstomTheme</item>
+        <item name="android:datePickerDialogTheme">@style/cstomTheme</item>
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:windowLightStatusBar" >true</item>
 
     </style>
-
-    <color name="orangeDark">#E48800</color>
+    <style name="cstomTheme" parent="android:Theme.Material.Dialog"/>
 
     <style name="cardStyle" >
         <item name="android:layout_width">wrap_content</item>
@@ -63,16 +58,17 @@
         <item name="cardElevation">12dp</item>
         <item name="android:layout_marginEnd">25dp</item>
         <item name="android:layout_marginStart">25dp</item>
-        <item name="cardBackgroundColor">@color/white</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:background">@drawable/bg_ripple_yellow</item>
+
     </style>
     <style name="cardLayout" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation" >vertical</item>
         <item name="android:padding">12dp</item>
-        <item name="android:clickable">true</item>
-        <item name="android:focusable">true</item>
-        <item name="android:background">@drawable/bg_ripple_yellow</item>
+
         <item name="android:gravity">center</item>
     </style>
     <style name="cardHtext" >
@@ -93,11 +89,11 @@
         <item name="android:scaleType" >centerCrop</item>
         <item name="android:layout_marginBottom" >10dp</item>
     </style>
-    <style name="suppBtn" parent="@style/Widget.Material3.Button.ElevatedButton" >
+    <style name="suppBtn" parent="@style/Widget.Material3.Button.TextButton" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">54dp</item>
         <item name="android:textSize" >16sp</item>
-        <item name="android:elevation" >18dp</item>
+        <item name="android:elevation" >5dp</item>
         <item name="android:textColor" >@color/darkGray</item>
         <item name="android:layout_marginStart" >10dp</item>
         <item name="android:layout_marginEnd" >10dp</item>
@@ -127,8 +123,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight" >1</item>
         <item name="android:textAlignment">textStart</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:elevation">10dp</item>
+        <item name="android:textColor">@color/darkGray</item>
+        <item name="android:textSize">14sp</item>
     </style>
     <style name="texInLay" parent="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense" >
         <item name="android:layout_width">match_parent</item>
@@ -141,6 +138,8 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight" >.6</item>
+        <item name="android:contentDescription" >@string/icon</item>
+
     </style>
     <style name="textRight" >
         <item name="android:layout_width">0dp</item>
@@ -168,15 +167,19 @@
     </style>
 
     <style name="tvdetail">
-            <item name="android:layout_width">wrap_content</item>
+            <item name="android:layout_width">0dp</item>
+            <item name="android:layout_weight">0.7</item>
             <item name="android:layout_height">wrap_content</item>
-            <item name="android:textSize" >16dp</item>
+        </style>
+    <style name="tvdetail2" parent="tvdetail">
+            <item name="android:layout_weight">2</item>
+            <item name="android:textStyle" >bold</item>
         </style>
 
     <style name="btnDetail">
             <item name="android:layout_width">45dp</item>
             <item name="android:layout_height">45dp</item>
-            <item name="android:layout_marginEnd" >5dp</item>
+            <item name="android:layout_marginEnd" >3dp</item>
         </style>
     <style name="fragInLay" parent="@style/Widget.Design.TextInputLayout">
         <item name="android:layout_width">match_parent</item>
@@ -187,7 +190,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">52dp</item>
         <item name="android:padding">5dp</item>
-        <item name="android:textSize" >15dp</item>
+        <item name="android:textSize" >15sp</item>
     </style>
 
 </resources>
