--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -46,15 +46,19 @@
         android:layout_height="wrap_content"
         android:text="Remember Me"/>
 
-    <Button
-        android:id="@+id/btnlogin"
-        style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="match_parent"
-        android:layout_height="52dp"
-        android:textSize="18dp"
-        android:layout_marginTop="5dp"
-        android:text="Login" />
-    <Button
+        <Button
+            android:id="@+id/btnlogin"
+            style="@style/Widget.MaterialComponents.Button"
+            android:layout_width="match_parent"
+            android:layout_height="52dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:text="Login"
+            android:textAllCaps="false"
+            android:textSize="18dp" />
+
+        <Button
         android:id="@+id/btnforget"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
