--- a/app/src/main/res/layout/activity_forget.xml
+++ b/app/src/main/res/layout/activity_forget.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgetActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,8 +17,8 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp"
+            android:layout_width="230dp"
+            android:layout_height="230dp"
             android:scaleType="centerCrop"
             android:src="@drawable/forg_img"
             android:contentDescription="@string/icon"/>
@@ -24,7 +27,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Reset your password\n"/>
+            android:textSize="18dp"
+            android:paddingBottom="10dp"
+            android:text="Reset your password"/>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/fragInLay"
@@ -47,4 +52,16 @@
 
     </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:text="After pressing reset password button, you will receive an email o reset our password. An email will be sent only to the email address that is registered with the Sign Up method.\n"/>
+
+</RelativeLayout>
