--- a/app/src/main/res/layout/fragment_sgin_up.xml
+++ b/app/src/main/res/layout/fragment_sgin_up.xml
@@ -67,6 +67,7 @@
         android:textSize="18sp"
         android:layout_marginTop="7dp"
         android:layout_marginBottom="8dp"
+        android:textAllCaps="false"
         android:text="Create Account" />
 
         </LinearLayout>
